fix: redux framework will break the antd style

--- a/js/src/assets/scss/global.scss
+++ b/js/src/assets/scss/global.scss
@@ -15,6 +15,10 @@ input[class*="ant-select"] {
 	border: none !important;
 	outline: none !important;
 }
+input.ant-input {
+	min-height: unset !important;
+	line-height: 1.5 !important;
+}
 
 @media print {
 	html,
